--- a/sap-core/src/main/config/prod.server.server-core-config.properties
+++ b/sap-core/src/main/config/prod.server.server-core-config.properties
@@ -7,7 +7,7 @@
 database.driverClassName=com.mysql.jdbc.Driver
 database.url=jdbc:mysql://diilo.fr/diilo_sap_prod
 database.userName=diilo_sap_prod
-database.password=diilo827
+database.password=
 database.schemaNames=diilo_sap_prod
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.showsql=false
@@ -27,7 +27,7 @@ service.picture.lowqual.prefix 	= /home/diilo/static/sap/pictures-lowqual/
 service.picture.lowqual.suffix 	= .jpg
 service.media.url.prefix = http://static.diilo.fr/sap/
 
-service.picture.imageshack.key = 379FGRVXd48ce25035d359caacbcfbc6315cd183
+service.picture.imageshack.key = 
 
 service.picture.fileid.size = 8
 
@@ -42,18 +42,18 @@ service.picture.position.tolerancy = 0.00207d
 service.picture.area.tolerancy = 0.02d
 
 #Consumer key
-twitter.consumer.key= 0165nPHO1bGVammN4PtOA
+twitter.consumer.key= 
 #Consumer secret
-twitter.consumer.secret=fTP8k2LzcH0ZSwEFqnhaM9fgh3Db4fSbt8q792IP2M
+twitter.consumer.secret=
 
 #Facebook 
-facebook.app.id 	= 156498491050051
-facebook.app.api.id = 30e399263748b1f2bfd5364730a9efea
-facebook.app.secret = a1838043ead3a34e6b6936be5617752b
+facebook.app.id 	= 
+facebook.app.api.id = 
+facebook.app.secret = 
 
 
 #APNS
 ApnsP12CertificationFilePath = /home/diilo/apns/CertificatsApnsLocaDiiLoProd.p12
-ApnsP12CertificationPassword = LocaDiiLo1983APNS_PROD
+ApnsP12CertificationPassword = 
 ApnsSandBox = false
 ApnsProd = true
