--- a/sap-core/src/main/config/dev.local.server-core-config.properties
+++ b/sap-core/src/main/config/dev.local.server-core-config.properties
@@ -6,8 +6,8 @@
 
 database.driverClassName=com.mysql.jdbc.Driver
 database.url=jdbc:mysql://diilo.fr/diilo_sap_dev
-database.userName=diilo_sap_dev
-database.password=diilo827
+database.userName=
+database.password=
 database.schemaNames=diilo_sap_dev
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.showsql=true
@@ -43,17 +43,17 @@ service.picture.area.tolerancy = 0.02d
 
 ## Twitter
 #Consumer key
-twitter.consumer.key= r6YlxLNF3mUHQUqWOWiexg
+twitter.consumer.key= 
 #Consumer secret
-twitter.consumer.secret=m6znhPwjgR8WE9kDELgv7QDMhMdXRlc0Rg1fTdIMwbE
+twitter.consumer.secret=
 
 #Facebook 
-facebook.app.id 	= 159194210781332
-facebook.app.api.id = e66d9e3d64372b6297cfbfc4cb408813
-facebook.app.secret = bdf0efb72d98242fde7d81ed97e07760
+facebook.app.id 	= 
+facebook.app.api.id = 
+facebook.app.secret = 
 
 #APNS
 ApnsP12CertificationFilePath = C:/DIILO/certificats_apns/CertificatsApnsLocaDiiLoDev.p12
-ApnsP12CertificationPassword = DiiLoAPNS1983!
+ApnsP12CertificationPassword =
 ApnsSandBox = false
 ApnsProd = true
