--- a/sap-core/src/main/config/dev.local.server-core-config.properties
+++ b/sap-core/src/main/config/dev.local.server-core-config.properties
@@ -26,7 +26,7 @@ service.picture.lowqual.prefix 	= /home/diilo/streetartphone/pictures-lowqual/
 service.picture.lowqual.suffix 	= .jpg
 service.media.url.prefix = http://static.diilo.fr/sap-dev/
 
-service.picture.imageshack.key = 01KOSUVX1cc7e8c9cf7c583707750d72db05f7f8
+service.picture.imageshack.key = 
 
 service.picture.fileid.size = 8
 
